<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogicaAppActivity">

    <TextView
        android:id="@+id/tv_Column_2_ff"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/False"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_Column_1_ff"
        app:layout_constraintEnd_toStartOf="@+id/et_Answer_ff"
        app:layout_constraintStart_toEndOf="@+id/tv_Column_1_ff"
        app:layout_constraintTop_toTopOf="@+id/tv_Column_1_ff" />

    <TextView
        android:id="@+id/tv_Column_1_ff"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/False"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
        app:layout_constraintEnd_toStartOf="@+id/tv_Column_2_ff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Column_1_ft" />

    <EditText
        android:id="@+id/et_Answer_ff"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:ems="2"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_Column_2_ff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_Column_2_ff"
        app:layout_constraintTop_toTopOf="@+id/tv_Column_2_ff"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tv_Column_2_ft"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/True"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_Column_1_ft"
        app:layout_constraintEnd_toStartOf="@+id/et_Answer_ft"
        app:layout_constraintStart_toEndOf="@+id/tv_Column_1_ft"
        app:layout_constraintTop_toTopOf="@+id/tv_Column_1_ft" />

    <TextView
        android:id="@+id/tv_Column_1_ft"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/False"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_Column_1_ff"
        app:layout_constraintEnd_toStartOf="@+id/tv_Column_2_ft"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Column_1_tf" />

    <EditText
        android:id="@+id/et_Answer_ft"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:ems="2"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_Column_2_ft"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_Column_2_ft"
        app:layout_constraintTop_toTopOf="@+id/tv_Column_2_ft"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tv_Column_2_tf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/False"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_Column_1_tf"
        app:layout_constraintEnd_toStartOf="@+id/et_Answer_tf"
        app:layout_constraintStart_toEndOf="@+id/tv_Column_1_tf"
        app:layout_constraintTop_toTopOf="@+id/tv_Column_1_tf" />

    <TextView
        android:id="@+id/tv_Column_1_tf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/True"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_Column_1_ft"
        app:layout_constraintEnd_toStartOf="@+id/tv_Column_2_tf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Column_1_tt" />

    <EditText
        android:id="@+id/et_Answer_tf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:ems="2"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_Column_2_tf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_Column_2_tf"
        app:layout_constraintTop_toTopOf="@+id/tv_Column_2_tf"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/title"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_Column_1_Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ColTitle1"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_Column_1_tt"
        app:layout_constraintEnd_toStartOf="@+id/tv_Column_2_Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tv_Column_2_Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ColTitle2"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_Column_1_Title"
        app:layout_constraintEnd_toStartOf="@+id/tv_Column_3_Title"
        app:layout_constraintStart_toEndOf="@+id/tv_Column_1_Title"
        app:layout_constraintTop_toTopOf="@+id/tv_Column_1_Title" />

    <TextView
        android:id="@+id/tv_Column_3_Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="@string/ColTitle3"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_Column_2_Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_Column_2_Title"
        app:layout_constraintTop_toTopOf="@+id/tv_Column_2_Title" />

    <EditText
        android:id="@+id/et_Answer_tt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:ems="2"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_Column_2_tt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_Column_2_tt"
        app:layout_constraintTop_toTopOf="@+id/tv_Column_2_tt"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tv_Column_2_tt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/True"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_Column_1_tt"
        app:layout_constraintEnd_toStartOf="@+id/et_Answer_tt"
        app:layout_constraintStart_toEndOf="@+id/tv_Column_1_tt"
        app:layout_constraintTop_toTopOf="@+id/tv_Column_1_tt" />

    <TextView
        android:id="@+id/tv_Column_1_tt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/True"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_Column_1_tf"
        app:layout_constraintEnd_toStartOf="@+id/tv_Column_2_tt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Column_1_Title" />

</androidx.constraintlayout.widget.ConstraintLayout>